# programming-studies

./: .gitmodules
clay-backend/: .gitignore  Makefile  nvim-dap.lua
clay-backend/src/: assert.h  json_parser.c  json_parser.h  json_serializer.c  json_serializer.h  main.c  math.h  memory.c  memory.h  msdf_atlas.c  msdf_atlas.h  os.c  os.h  str.h  string.h  thread.c  thread.h  typedefs.h
clay-backend/tools/: hza_gen  hza_gen.c
clay-backend/web/: README.md  Roboto-Regular-atlas.json  Roboto-Regular.hza  border.glsl.js  image.glsl.js  index.html  main.js  main.ts  msdf.glsl.js  os_file.js  os_file.ts  package.json  rectangle.glsl.js  renderer.js  renderer.ts  roboto_atlas.json  text.glsl.js  tsconfig.json  wasm.js  wasm.ts
compilers/c_interpreter/: .gitignore  Makefile  arena_allocator.c  ast.c  compile_commands.json  global.c  global.h  lexer.c  lexer_test.c  macros.h  main.c  nvim-dap.lua  parser.c  parser_test.c  str_builder.c  string.c  token.c  token_test.c  unity.c  utils.c
compilers/go_interpreter/: .nvim-dap.lua  go.mod  main.go  notes.md
gamedev/c-ios/: .dockerignore  .gitignore  Dockerfile  Dockerfile.runpod  Entitlements.plist  Info.plist  Makefile  Makefile.video  README.md  RUNPOD_DEPLOYMENT.md  build  build.c  build_fast.sh  build_old.c  clear-sapp  clear-sapp-ios  clear-sapp.c  compile_commands.json  debug-setup.md  deploy.sh  docker-build.sh  docker-run.sh  generate-video.ts  health-check.ts  main.c  nvim-dap.lua  runpod-build.sh  runpod-push.sh  runpod-test.sh  runpod_handler.py  test-runpod-endpoint-async.py  test-runpod-endpoint.py  test_daemon_requests.py  test_handler.py  test_socket.py  todos.md  triangle-sapp  triangle-sapp.c
gamedev/c-sokol/: .gitignore  Makefile  compile_commands.json  game.c  main.c  platform.c  platform.h  todos.md
gamedev/graphics/raytracing-cherno/: .clangd  .gitignore  CMakeLists.txt  imgui.ini  raytracing-cherno
gamedev/graphics/raytracing-cherno/src/: main.cpp  platform.cpp  platform.hpp  random.cpp  random.hpp  texture.cpp  texture.hpp
gamedev/love2d/: .luarc.json  main.lua
gamedev/pacman-odin/: Makefile  index.html  main.odin  pacman-odin  pacman-odin.wasm
gamedev/pacman.c/: Makefile  common.h  game.c  game.h  main.c  main2.c  main_sdl.c  nvim-dap.lua  pacman_bk.c  ref_handmade.cpp  rom.c  sdl_test  typedefs.h  video_ram_dump.txt
gamedev/wolfestein-rs/: Cargo.toml
gamedev/wolfestein-rs/src/: lib.rs  main.rs
gamedev/zig-flecs/: build.zig
gamedev/zig-sokol/: build.zig  build.zig.zon
ktx_textures/: .gitignore  export.txt  index.html  package.json  vite.config.ts
ktx_textures/src/: format-detection.ts  ktx-parser.ts  main.ts  style.css  texture-loader.ts  webgl-renderer.ts
multicore-wasm/: .gitignore  Makefile  index.html  main.c  main.ts  main_bk.c  main_old.c  main_worker.ts  package.json  server.ts  shared.ts  test-runner.ts  worker.ts
multicore-wasm/.claude/: settings.local.json
multicore-wasm/demos/: demo_atomics.c  demo_barrier.c  demo_condvar.c  demo_detach.c  demo_mutex.c  demo_once.c  demo_rwlock.c  demo_semaphore.c  demo_shared_memory.c  demo_thread_attr.c  demo_thread_create.c  demo_tls.c
multicore-wasm/lib/: CLAUDE.md  allocator_pool.c  array.h  assert.h  audio.c  audio.h  cmd_line.h  file_system.c  fmt.h  handle.c  json_parser.c  json_serializer.c  ktx.h  lipsync.c  memory.c  multicore_runtime.c  pthread_barrier.c  queue.h  string.h  string_builder.h  task.c  task.h  test.h  thread.c  thread.h  thread_context.h  typedefs.h  yaml_parser.c
multicore-wasm/os/: os.h  os_wasm.c
other/multicore_by_default/: .gitignore  Makefile  array.h  compile_commands.json  main.c  memory.c  memory.h  multicore_homogeneous.c  multicore_tasks.c  nvim-dap.lua  thread.c  thread.h  thread_context.h  todos.md  typedefs.h
pikuma/wolfestein-engine-2/: .nvim-dap.lua  Cargo.toml
pikuma/wolfestein-engine-3/: Cargo.toml
programming-languages/c/wolfestein-engine-c/: .gitignore  .gitmodules  CMakeLists.txt
programming-languages/c/wolfestein-engine-c/remedy/: session.rdbg
programming-languages/c/wolfestein-engine-c/scripts/: cmake_config.ps1  wolfestein_debug.ps1  wolfestein_run.ps1
programming-languages/c/wolfestein-engine-c/src/: engine.c  engine.h  main.c
programming-languages/rust/bevy-engine/1_breakout/: Cargo.toml
programming-languages/rust/bevy-engine/1_breakout/src/: lib.rs  main.rs
programming-languages/rust/bevy-engine/2_hotreloadtest/: Cargo.toml
programming-languages/rust/bevy-engine/2_hotreloadtest/src/: lib.rs
programming-languages/rust/bevy-engine/3_eguieditor/: Cargo.toml
programming-languages/rust/bevy-engine/3_eguieditor/src/: main.rs
programming-languages/rust/bevy-engine/4_egui_2d_editor/: Cargo.toml
programming-languages/rust/bevy-engine/4_egui_2d_editor/assets/scenes/: level_1.scn.ron
programming-languages/rust/bevy-engine/4_egui_2d_editor/remedy/: debug_session.rdbg
programming-languages/rust/bevy-engine/4_egui_2d_editor/src/: common.rs  game.rs  level_editor.rs  lib.rs  main.rs  notes.md
programming-languages/rust/bevy-engine/5_webgpu/: Cargo.toml  Trunk.toml
programming-languages/rust/bevy-engine/5_webgpu/.cargo/: config.toml
programming-languages/rust/bevy-engine/5_webgpu/src/: main.rs
programming-languages/rust/bevy-engine/6_webgpu2/: .gitignore  Cargo.toml  index.html  justfile  release.html
programming-languages/rust/bevy-engine/6_webgpu2/.github/workflows/: deploy-web.yml
programming-languages/rust/bevy-engine/6_webgpu2/remedy/: debug.rdbg
programming-languages/rust/bevy-engine/6_webgpu2/src/: lib.rs  main.rs
wasm-multicore-demo/: .gitattributes  .gitignore  CLAUDE.md  Makefile  app.c  app.h  assets.c  assets.h  async_file_test.c  blob_asset.h  camera.c  camera.h  cgltf.h  claude_talk_251210.txt  context.c  context.h  cube.blend  cube.glb  cube.h  ecs_demos.txt  entrypoint.c  entrypoint_win32.c  exporter.c  fish.glb  fish_shader_generated.txt  flycam.c  flycam.h  generated_shader.txt  gpu.c  gpu.h  gpu_backend.h  gpu_backend_d3d11.c  gpu_backend_webgpu.c  index.html  input.c  input.h  main.c  main.js  main.mjs  main.ts  (+22 more)
(+916 files in other folders)
