[package]
name = "wolfestein-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
error-iter = "0.4.1"
log = "0.4.21"
pixels = "0.13.0"
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.15.3"
