[package]
name = "egui_2d_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = "0.19.0"
egui_dock = "0.7.3"
egui-gizmo = "0.11.0"
dexterous_developer = "0.0.10"
serde = "1"
