[package]
name = "webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.web-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.devnative]
inherits = "dev"

[profile.devdebug]
inherits = "dev"
opt-level = 0

[features]
dyn = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "animation",          #Enable animation support, and glTF animation loading
    "bevy_animation",     #Provides animation functionality
    "bevy_asset",         #Provides asset functionality
    "bevy_audio",         #Provides audio functionality
    "bevy_core_pipeline", #Provides cameras and other basic render pipeline features
    "bevy_gilrs",         #Adds gamepad support
    "bevy_gizmos",        #Adds support for rendering gizmos
    "bevy_gltf",          #glTF support
    "bevy_render",        #Provides rendering functionality
    "bevy_scene",         #Provides scene functionality
    "bevy_winit",         #winit window and input backend
    "hdr",                #HDR image format support
    "ktx2",               #KTX2 compressed texture support
    "multi-threaded",     #Enables multithreaded parallelism in the engine. Disabling it forces all engine tasks to run on a single thread.
    "png",                #PNG image format support
] }
dexterous_developer = "0.0.12"

[dev-dependencies]
just = "1.21.0"
